FEs-335: fix close modal on mobile

--- a/src/index/components/cabinet/LoadingStatus/LoadingStatus.less
+++ b/src/index/components/cabinet/LoadingStatus/LoadingStatus.less
@@ -60,14 +60,14 @@
 .LoadingStatus__failed__icon_connection {
   width: 120px;
   height: 120px;
-  background: url("../../../../asset/cabinet/loading_failed_connetion_120.svg")
+  background: url("../../../../asset/120/failed.svg")
     no-repeat center/contain;
 }
 
 .LoadingStatus__failed__icon {
   width: 120px;
   height: 120px;
-  background: url("../../../../asset/cabinet/loading_failed_120.svg") no-repeat
+  background: url("../../../../asset/120/failed.svg") no-repeat
     center/contain;
 }
 
